[tool.poetry]
name = "quiltplus"
version = "0.9.1"
description = "Resource-oriented Python API/CLI for Quilt's decentralized social knowledge platform"
authors = ["Ernest Prabhakar <ernest@quiltdata.io>"]
license = "MIT"
readme = "README.md"
keywords = ["yaml", "api", "resource", "quilt"]
packages = [
   { include = "quiltplus" }
]

[tool.poetry.dependencies]
python = "^3.10"
urllib3 = "<2"
quilt3 = "^5.1.0"
trio = "^0.22.0"
isort = "^5.12.0"
asyncclick = "^8.1.3.4"
pytest-cov = "^4.0.0"
anyio = "^3.7.0"
typing-extensions = "^4.6.3"
un-yaml = ">=0.2.0"
# udc = {git = "https://github.com/data-yaml/udc.git", rev = "main"}
tzlocal = "^5.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest-trio = "^0.8.0"
pytest-watcher = "^0.3.1"
mypy = "^1.3.0"
types-pyyaml = "^6.0.12.10"
types-tzlocal = "^5.0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
