[tool.poetry]
name = "quiltplus"
version = "0.9.8a0"
description = "Async Python API for Quilt's fractal social knowledge platform"
authors = ["Ernest Prabhakar <ernest@quiltdata.io>"]
license = "MIT"
readme = "README.md"
keywords = ["yaml", "api", "resource", "quilt"]
packages = [
   { include = "quiltplus" }
]

[tool.poetry.dependencies]
python = "^3.10"
asyncclick = "^8.1.3.4"
anyio = "^3.7.1"
isort = "^5.12.0"
quilt3 = "^5.1.0"
quiltcore = "^0.3.5"
# quiltcore = {git = "https://github.com/quiltdata/quiltcore.git", rev = "fix-types"}
trio = "^0.22.2"
typing-extensions = "^4.7.1"
tzlocal = "^5.0.1"
un-yaml = ">=0.3.1"
# un-yaml = {git = "https://github.com/data-yaml/un-yaml.git", rev = "main"}
universal-pathlib = "^0.1.1"
urllib3 = "<2"
fastapi = "^0.104.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.0.0"
mypy = "^1.4.1"
pytest-cov = "^4.0.0"
pytest-codeblocks = "^0.16.1"
pytest-trio = "^0.8.0"
pytest-watcher = "^0.3.4"
types-pyyaml = "^6.0.12.10"
types-tzlocal = "^5.0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
